# indentex

./: .atom-build.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  HomebrewFormula  LICENSE.md  README.md  appveyor.yml
.github/: dependabot.yml
indentexlib/: Cargo.toml
indentexlib/src/: file_utils.rs  lib.rs  parsers.rs  parsing_types.rs  preprocessing.rs  utils.rs
indentexlib/src/snapshots/: transpile_spec__corner_cases.snap  transpile_spec__list_like.snap  transpile_spec__mixed_tabs.snap
indentexlib/tests/: integration_test.rs
indentexlib/tests/assets/: corner_cases.inden.tex  large_latex_corpus.inden.tex  list_like.inden.tex  mixed_tabs.inden.tex  single_line_cmds.inden.tex
indentexlib/tests/snapshots/: integration_test__corner_cases.snap  integration_test__envs.snap  integration_test__large_corpus.snap  integration_test__list_like.snap  integration_test__mixed_tabs.snap  integration_test__single_line_cmds.snap
packaging/macos_brew/: indentex_bin.rb
packaging/windows_choco/: VERIFICATION_TEMPLATE.txt  indentex_template.nuspec  indentex_template.xml  make.ps1
packaging/windows_choco/package/: indentex.nuspec
packaging/windows_wix/: .gitignore  configure.py  indentex_template.wxs  make_installer.bat  make_installer.ps1  package_info.py  rename_installer.py
packaging/wix/: .gitignore  LICENSE.rtf  configure.py  indentex.wxs  indentex_template.wxs  make_installer.bat  make_installer.ps1
src/: error.rs  file_utils.rs  helper_parsers.rs  lib.rs  main.rs  parsers.rs  parsing_types.rs  transpile.rs
src/snapshots/: transpile_spec__transpile::tests::transpile_spec::environments.snap  transpile_spec__transpile::tests::transpile_spec::single_line_commands.snap
tests/: compare_to_reference.py  run_blns_test.sh  test_against_blns.py  test_libindentex.py
tests/references/: corner_cases.tex  envs.tex  large_corpus.tex  list_like.tex  single_line_cmds.tex
tests/test_cases/: corner_cases.inden.tex  envs.inden.tex  large_corpus.inden.tex  list_like.inden.tex  single_line_cmds.inden.tex
