[package]
name = "indentex"
version = "0.4.0"
authors = ["Mikhail Pak <mikhail.pak@tum.de>", "Hans Kirchner <h.kirchner@tum.de>"]
license = "MIT"
description = "An indentation-based superset of LaTeX"
readme = "README.md"
keywords = ["latex"]
repository = "https://github.com/mp4096/indentex"
publish = false


[dependencies]
clap = "^2.26.0"
globset = "^0.2.0"
ignore = "^0.2.2"
nom = "^3.2.0"
rayon = "^0.8.2"


[profile.release]
opt-level = 3
lto = true
debug-assertions = false


[package.metadata.deb]
maintainer = "Mikhail Pak <mikhail.pak@tum.de>"
copyright = "2016-2017, Mikhail Pak <mikhail.pak@tum.de>, Hans Kirchner <h.kirchner@tum.de>"
license_file = ["LICENSE.md", "6"]
extended_description = "A transpiler for an indentation-based superset of LaTeX."
depends = "$auto"
section = "tex"
priority = "optional"
assets = [
    ["target/release/indentex", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/indentex/README", "644"],
    ]
