[package]
name = "indentex"
version = "0.5.0-beta"
authors = ["Mikhail Pak <code@mp4096.com>", "Hans Kirchner <h.kirchner@tum.de>"]
license = "MIT"
description = "Transpiler for an indentation-based superset of LaTeX"
readme = "README.md"
keywords = ["latex"]
repository = "https://github.com/mp4096/indentex"
publish = false
edition = "2018"


[dependencies]
clap = "^2.33.0"
globset = "^0.4.2"
ignore = "^0.4.7"
nom = "^5.0.0-beta2"
rayon = "^1.1.0"


[profile.release]
opt-level = 3
lto = true
debug-assertions = false


[package.metadata.deb]
maintainer = "Mikhail Pak <code@mp4096.com>"
copyright = "2016-2019, Mikhail Pak <code@mp4096.com>, Hans Kirchner <h.kirchner@tum.de>"
license-file = ["LICENSE.md", "6"]
extended-description = "A transpiler for an indentation-based superset of LaTeX."
depends = "$auto"
section = "tex"
priority = "optional"
assets = [
    ["target/release/indentex", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/indentex/README", "644"],
    ]
