[package]
name = "indentexlib"
version = "0.5.0"
authors = ["Mikhail Pak <code@mp4096.com>", "Hans Kirchner <h.kirchner@tum.de>"]
license = "MIT"
description = "Library for the Indentex transpiler"
publish = false
edition = "2018"

[lib]
name = "indentexlib"
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = false
plugin = false
proc-macro = false
harness = true

[dependencies]
nom = "^5.1.2"

[dev-dependencies]
insta = "^1.7.0"
